grammar.js
    translation_unit: $ => seq(
      repeat($._top_level_item),
      optional($.program),
    ),

    _top_level_item: $ => prec(2, choice(
      seq($.include_statement, $._end_of_statement),
      $.program,
      $.module,
      $.submodule,
      $.interface,
      $.subroutine,
      $.function,
      $.block_data,
      $.preproc_if,
      $.preproc_ifdef,
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    )),

    // Preprocessor

    preproc_include: $ => seq(
      preprocessor('include'),
      field('path', choice(
        $.string_literal,
        $.identifier,
        $.system_lib_string,
        alias($.preproc_call_expression, $.call_expression),
      )),
      /\r?\n/,
    ),

    preproc_def: $ => seq(
      preprocessor('define'),
      field('name', $.identifier),
      field('value', optional($.preproc_arg)),
      token(prec(1, /\r?\n/)), // force newline to win over preproc_arg
    ),

    preproc_function_def: $ => seq(
      preprocessor('define'),
      field('name', $.identifier),
      field('parameters', $.preproc_params),
      field('value', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    preproc_params: $ => seq(
      token.immediate('('), commaSep(choice($.identifier, '...')), ')',
    ),

    preproc_call: $ => seq(
      field('directive', $.preproc_directive),
      field('argument', optional($.preproc_arg)),
      token.immediate(/\r?\n/),
    ),

    ...preprocIf('', $ => repeat($._top_level_item), 4),
    ...preprocIf('_in_module', $ => seq(
      repeat($._specification_part),
      optional($.internal_procedures)
    )),
    ...preprocIf('_in_specification_part', $ => seq(
      repeat($._specification_part),
      repeat($._statement),
      optional($.internal_procedures)
    ), 3),
    ...preprocIf('_in_statements', $ => seq(
      repeat($._statement),
      optional($.internal_procedures)
    ), 1),
    ...preprocIf('_in_procedure_statements', $ => seq(
      repeat($._statement),
      optional($.internal_procedures)
    ), 2),
    ...preprocIf('_in_internal_procedures', $ => repeat($._internal_procedures)),
    ...preprocIf('_in_interface', $ => repeat($._interface_items)),
    ...preprocIf('_in_derived_type', $ => repeat($.variable_declaration)),
    ...preprocIf('_in_bound_procedures', $ => repeat($._procedure_binding)),
    ...preprocIf('_in_select_case', $ => $.case_statement),
    ...preprocIf('_in_select_type', $ => $.type_statement),
    ...preprocIf('_in_select_rank', $ => $.rank_statement),

    preproc_arg: _ => token(prec(-1, /\S([^/\n]|\/[^*]|\\\r?\n)*/)),
    preproc_directive: _ => /#[ \t]*[a-zA-Z0-9]\w*/,

    preproc_defined: $ => choice(
      prec(PREPROC_PREC.CALL, seq('defined', '(', $.identifier, ')')),
      seq('defined', $.identifier),
    ),

    // Preprocessor unary operator uses an external scanner to catch
    // '!' before its parsed as a comment
    inline_preproc_comment: $ => /\/\/.*/,
    multiline_preproc_comment: $ => /\/\*([^*]|\*+[^*/])*\*+\//,

    system_lib_string: _ => token(seq(
      '<',
      repeat(choice(/[^>\n]/, '\\>')),
      '>',
    )),

    // Block level structures

    program: $ => seq(
      optional($.program_statement),
      repeat(
        choice(
          $._specification_part,
          alias($.preproc_if_in_specification_part, $.preproc_if),
          alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef)
        ),
      ),
      repeat($._statement),
      optional($.internal_procedures),
      optional($.statement_label),
      $.end_program_statement,
      $._end_of_statement
    ),

    program_statement: $ => seq(caseInsensitive('program'), $._name, $._end_of_statement),
    end_program_statement: $ => blockStructureEnding1($, 'program', $._name),

    module: $ => seq(
      $.module_statement,
      repeat(
        choice(
          $._specification_part,
          alias($.preproc_if_in_module, $.preproc_if),
          alias($.preproc_ifdef_in_module, $.preproc_ifdef)
        ),
      ),
      optional($.internal_procedures),
      $.end_module_statement,
      $._end_of_statement
    ),

    module_statement: $ => seq(caseInsensitive('module'), $._name, $._end_of_statement),
    end_module_statement: $ => blockStructureEnding1($, 'module', $._name),

    module_name: $ => $._name,

    interface: $ => seq(
      $.interface_statement,
      repeat(choice(
        $._interface_items,
        $.include_statement,
        $.preproc_include,
        $.preproc_def,
        $.preproc_function_def,
        $.preproc_call,
        alias($.preproc_if_in_interface, $.preproc_if),
        alias($.preproc_ifdef_in_interface, $.preproc_ifdef),
      )),
      $.end_interface_statement,
      $._end_of_statement
    ),

    _interface_items: $ => choice(
        $.import_statement,
        $.procedure_statement,
        $.function,
        $.subroutine,
        ';'
    ),

    interface_statement: $ => seq(
      optional($.abstract_specifier),
      caseInsensitive('interface'),
      optional(choice($._name, $._generic_procedure)),
      $._end_of_statement,
    ),

    end_interface_statement: $ => blockStructureEnding1($, 'interface', $._end_interface_spec),

    _end_interface_spec: $ => choice(
      $._name,
      $._generic_procedure
    ),

    // Obsolescent feature
    _generic_procedure: $ => choice(
        $.assignment,
        $.operator,
        $.defined_io_procedure,
    ),

    subroutine: $ => procedure($, $.subroutine_statement, $.end_subroutine_statement),

    subroutine_statement: $ => seq(
      optional($._callable_interface_qualifers),
      caseInsensitive('subroutine'),
      field('name', $._name),
      optional(field('parameters',$._parameters)),
      optional($.language_binding),
      $._end_of_statement,
    ),

    end_subroutine_statement: $ => blockStructureEnding1($, 'subroutine', $._name),

    _callable_interface_qualifers: $ => repeat1(
      prec.right(1, choice(
        $.procedure_attributes,
        $.procedure_qualifier,
        field('type', $.intrinsic_type),
        field('type', $.preproc_type),
        field('type', $.derived_type)
      ))),

    _name: $ => alias($.identifier, $.name),

    _parameters: $ => choice(
      seq('(', ')'),
      $.parameters
    ),

    internal_procedures: $ => seq(
      $.contains_statement,
      $._end_of_statement,
      repeat($._internal_procedures)
    ),

    contains_statement: $ => caseInsensitive('contains'),

    _internal_procedures: $ => choice(
      $.function,
      $.module_procedure,
      $.subroutine,
      $.include_statement,
      alias($.preproc_if_in_internal_procedures, $.preproc_if),
      alias($.preproc_ifdef_in_internal_procedures, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
    ),

    // Variable Declarations

    _specification_part: $ => prec(1, choice(
      // Split out so it can be used as a supertype
      seq($._specification_parts, $._end_of_statement),
      // These two can't be included in the above because or we
      // duplicate the end_of_statement in the end block rule
      $.interface,
      $.derived_type_definition,
      // This allows format statements in the specification part,
      // without making the statements rule particularly awkward
      prec(1, seq($.statement_label, $.format_statement, $._end_of_statement)),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      alias($.preproc_if_in_specification_part, $.preproc_if),
      alias($.preproc_ifdef_in_specification_part, $.preproc_ifdef),
      ';',
    )),

    use_statement: $ => seq(
      caseInsensitive('use'),
      choice(
        optional(
          seq(',', choice(caseInsensitive('intrinsic'), caseInsensitive('non_intrinsic')), '::')
        ),
        optional('::')
      ),
      alias($.identifier, $.module_name),
      optional(
        choice(
          seq(',', commaSep1($.use_alias)),
          $.included_items
        )
      ),
    ),

    included_items: $ => seq(
      ',',
      caseInsensitive('only'),
      ':',
      optional(commaSep1(
        choice(
          $.use_alias,
          $.identifier,
          $._generic_procedure)
      ))
    ),

    implicit_statement: $ => seq(
      caseInsensitive('implicit'),
      choice(
        commaSep1(seq(
          choice(
            $.intrinsic_type,
            $.preproc_type,
            $.derived_type
          ),
          '(',
          commaSep1($.implicit_range),
          ')'
        )),
        seq(
          caseInsensitive('none', $.none),
          optional(seq(
            '(',
            commaSep1(choice(
              caseInsensitive('type'),
              caseInsensitive('external')
            )),
            ')'
          ))
        )
      ),
    ),

    derived_type_definition: $ => seq(
      $.derived_type_statement,
      repeat(choice(
        seq(
          choice(
            $.public_statement,
            $.private_statement,
            caseInsensitive('sequence', $.sequence_statement),
            $.include_statement,
          ),
          $._end_of_statement
        ),
        seq($.variable_declaration, $._end_of_statement),
        $.preproc_include,
        $.preproc_def,
        $.preproc_function_def,
        $.preproc_call,
        alias($.preproc_if_in_derived_type, $.preproc_if),
        alias($.preproc_ifdef_in_derived_type, $.preproc_ifdef),
      )),
      optional($.derived_type_procedures),
      $.end_type_statement,
      $._end_of_statement
    ),

    _derived_type_qualifier: $ => choice(
      $.abstract_specifier,
      field('access', $.access_specifier),
      field('base', $.base_type_specifier),
      $.language_binding
    ),

    derived_type_statement: $ => seq(
      optional($.statement_label),
      caseInsensitive('type'),
      choice(
        seq(optional('::'), $._type_name),
        seq(',', commaSep1($._derived_type_qualifier), '::', $._type_name)
      ),
      optional(alias($.argument_list, $.derived_type_parameter_list)),
      $._end_of_statement,
    ),

    end_type_statement: $ => blockStructureEnding1($, 'type', $._name),

    _type_name: $ => alias($.identifier, $.type_name),

    derived_type_procedures: $ => seq(
      $.contains_statement,
      repeat(choice(
        alias('private', $.private_statement),
        $._procedure_binding,
        $.include_statement,
        alias($.preproc_if_in_bound_procedures, $.preproc_if),
        alias($.preproc_ifdef_in_bound_procedures, $.preproc_ifdef),
      )),
    ),

    _procedure_binding: $ => choice(
      $.procedure_statement,
      $.generic_statement,
      $.final_statement
    ),

    procedure_statement: $ => seq(
      $.procedure_kind,
      optional(seq(
        '(', alias($.identifier, $.procedure_interface), ')'
      )),
      optional(seq(
        ',',
        commaSep1($.procedure_attribute)
      )),
      optional('::'),
      commaSep1(field('declarator', choice(
        $._method_name,
        $.binding,
      ))),
    ),

    final_statement: $ => seq(
      caseInsensitive('final'),
      '::',
      commaSep1(field('declarator', $._method_name))
    ),

    _method_name: $ => alias($.identifier, $.method_name),

    procedure_kind: $ => choice(
      caseInsensitive('initial'),
      caseInsensitive('procedure'),
      seq(caseInsensitive('module'), caseInsensitive('procedure')),
      caseInsensitive('property'),
    ),

    variable_declaration: $ => seq(
      field('type', choice(
        $.intrinsic_type,
        $.preproc_type,
        $.derived_type,
        alias($.procedure_declaration, $.procedure),
        $.declared_type,
      )),
      optional(seq(',',
        commaSep1(
          field(
            'attribute',
            choice(
              $.type_qualifier,
              $.language_binding
            ))
        )
      )),
      optional('::'),
      $._declaration_targets,
    ),

    _declaration_targets: $ => commaSep1(field('declarator', choice(
      $._variable_declarator,
      alias($._declaration_assignment, $.init_declarator),
      alias($._declaration_pointer_association, $.pointer_init_declarator),
      $.data_declarator,
    ))),

    _intrinsic_type: $ => choice(
        caseInsensitive('byte'),
        caseInsensitive('integer'),
        caseInsensitive('real'),
        whiteSpacedKeyword('double', 'precision'),
        caseInsensitive('complex'),
        whiteSpacedKeyword('double', 'complex'),
        caseInsensitive('logical'),
        caseInsensitive('character'),
    ),

    intrinsic_type: $ => seq(
      $._intrinsic_type,
      optional(field('kind', $.kind)),
    ),

    kind: $ => choice(
      seq(optional(alias('*', $.assumed_size)), $._argument_list),
      seq('*', choice(alias(/\d+/, $.number_literal), $.parenthesized_expression))
    ),

    _statement: $ => choice(
      alias($.preproc_if_in_statements, $.preproc_if),
      alias($.preproc_ifdef_in_statements, $.preproc_ifdef),
      $.preproc_include,
      $.preproc_def,
      $.preproc_function_def,
      $.preproc_call,
      seq(
        optional($.statement_label),
        $._statements,
        $._end_of_statement
      ),
      ';'
    ),

    assignment_statement: $ => prec.right(PREC.ASSIGNMENT, seq(
      field('left',$._expression),
      '=',
      field('right',$._expression),
    )),

    select_case_statement: $ => seq(
      optional($.block_label_start_expression),
      whiteSpacedKeyword('select', 'case'),
      $.selector,
      $._end_of_statement,
      repeat(choice(
        $.case_statement,
        $.preproc_include,
        $.preproc_def,
        $.preproc_function_def,
        $.preproc_call,
        alias($.preproc_if_in_select_case, $.preproc_if),
        alias($.preproc_ifdef_in_select_case, $.preproc_ifdef),
      )),
      optional($.statement_label),
      $.end_select_statement
    ),

    end_select_statement: $ => blockStructureEnding1($, 'select', $._block_label),

    selector: $ => seq('(',
      choice($._expression, $.pointer_association_statement),
      ')'),

    case_statement: $ => seq(
      caseInsensitive('case'),
      choice(
        seq('(', $.case_value_range_list, ')'),
        caseInsensitive('default', $.default)
      ),
      optional($._block_label),
      $._end_of_statement,
      repeat($._statement)
    ),

    case_value_range_list: $ => commaSep1(choice(
      $._expression,
      $.extent_specifier
    )),

    _expression: $ => choice(
      $.number_literal,
      $.complex_literal,
      $.string_literal,
      $.boolean_literal,
      $.array_literal,
      $.null_literal,
      $.identifier,
      $.derived_type_member_expression,
      $.logical_expression,
      $.relational_expression,
      $.concatenation_expression,
      $.math_expression,
      $.unary_expression,
      $.parenthesized_expression,
      $.call_expression,
      $.implied_do_loop_expression,
      $.coarray_expression,
      $.conditional_expression,
    ),

    math_expression: $ => {
      const table = [
        ['+', PREC.ADDITIVE],
        ['-', PREC.ADDITIVE],
        ['*', PREC.MULTIPLICATIVE],
        ['/', PREC.MULTIPLICATIVE],
        ['**', PREC.EXPONENT],
        [$.user_defined_operator, PREC.DEFINED_OPERATOR]
      ]

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      }))
    },

    unary_expression: $ => prec.right(PREC.UNARY, seq(
      field('operator', choice('-', '+', $.user_defined_operator)),
      field('argument', $._expression)
    )),

    call_expression: $ => prec(
      PREC.CALL,
      seq($._expression, repeat1($.argument_list))
    ),

    _block_label: $ => alias($.identifier, $.block_label),
